# docs/swagger.yaml
@@ -4,6 +4,11 @@ definitions:
       title:
         type: string
     type: object
+  collection.UpdateService:
+    properties:
+      title:
+        type: string
+    type: object
   dto.Response:
     properties:
       data:
@@ -18,17 +23,20 @@ definitions:
 info:
   contact: {}
 paths:
-  /collection:
-    post:
-      parameters:
-      - description: 创建收藏
-        in: body
-        name: menu
-        required: true
-        schema:
-          $ref: '#/definitions/collection.CreateService'
-      produces:
+  /api/v1/collection:
+    get:
+      consumes:
       - application/json
+      description: 获取分页列表
+      parameters:
+      - description: 当前页
+        in: query
+        name: pageIndex
+        type: integer
+      - description: 分页条数
+        in: query
+        name: pageSize
+        type: integer
       responses:
         "200":
           description: OK
@@ -38,7 +46,103 @@ paths:
           description: 失败
           schema:
             $ref: '#/definitions/dto.Response'
-      summary: 创建收藏
+      summary: 分页列表
+      tags:
+      - Collection
+    post:
+      description: 创建信息
+      parameters:
+      - description: 创建信息
+        in: body
+        name: collection
+        required: true
+        schema:
+          $ref: '#/definitions/collection.CreateService'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: 失败
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: 创建信息
+      tags:
+      - Collection
+  /api/v1/collection/{id}:
+    delete:
+      consumes:
+      - application/x-json-stream
+      description: 删除通过id信息
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: 失败
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: 删除通过id信息
+      tags:
+      - Collection
+    get:
+      consumes:
+      - application/x-json-stream
+      description: 通过id获取信息
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: 失败
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: 通过Id获取信息
+      tags:
+      - Collection
+    put:
+      consumes:
+      - application/json
+      description: 通过id修改信息
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 修改信息
+        in: body
+        name: collection
+        required: true
+        schema:
+          $ref: '#/definitions/collection.UpdateService'
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: 失败
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: 通过id修改信息
       tags:
       - Collection
   /system/login:
