# router/collection.go
@@ -5,13 +5,13 @@ import (
 	api "kingford-backend/api/v1/collection"
 )
 
-func RegisterCollectionSysRouter(router *gin.RouterGroup)  {
-	r := router.Group("collection")
+func RegisterCollectionRouter(router *gin.RouterGroup) {
+	r := router.Group("v1")
 	{
-		//r.GET("/", api.GetList)
-		//r.GET("/:id", sys_user.Get)
-		r.POST("/", api.Create)
-		//r.PUT("/:id", sys_user.Put)
-		//r.DELETE("/:id", sys_user.Delete)
+		r.GET("/collection", api.GetList)
+		r.GET("/collection/:id", api.Get)
+		r.POST("/collection", api.Create)
+		r.PUT("/collection/:id", api.Update)
+		r.DELETE("/collection/:id", api.Delete)
 	}
 }
